# gymbot

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  gymbot.cc
bot/: CMakeLists.txt
bot/include/bot/: Vocabular.hpp
bot/include/bot/database/: DB.hpp  RedisConn.hpp  UserStorage.hpp
bot/include/bot/handlers/: Handlers.hpp
bot/include/bot/keyboards/: Keyboards.hpp
bot/include/bot/utils/: Utils.hpp
bot/src/database/: DB.cpp  RedisConn.cpp  UserStorage.cpp
bot/src/handlers/: Handlers.cpp
bot/src/keyboards/: Keyboards.cpp
bot/src/utils/: Utils.cpp
db_setup/: db_entry.sh  db_setup.sql  exercise.csv  workout.csv
setup/: db_entry.sh  db_setup.sql  table.ipynb
